# HoMM3UnitHelper

./: .gitignore  .gitmodules  CMakeLists.txt  Homm3UnitHelper.rc  Homm3UnitHelper.sln  Homm3UnitHelper.vcxproj  Homm3UnitHelper.vcxproj.filters  README.md  TcharMacros.h  main.cpp  resource.h
DataReader/: BinaryReader.cpp  BinaryReader.h  DataReader.cpp  DataReader.h
DataReader/ExtendedGameData/: UnitExtended.cpp  UnitExtended.h
DataReader/HDAT/: Hdat.h  HdatReader.cpp  HdatReader.h  ResourceBeginEntry.cpp  ResourceBeginEntry.h  ResourceDescriptor.cpp  ResourceDescriptor.h  ResourceEntry.cpp  ResourceEntry.h  ResourceType.h
DataReader/LOD/: EntryNotFoundException.h  GameDataReader.h  Lod.h  LodEntry.h  LodFile.cpp  LodFile.h  LodReader.cpp  LodReader.h  UnsupportedFileTypeException.h  h3lod_defs.h
DataReader/LOD/Txt/: TxtReader.cpp  TxtReader.h  UnitDataReader.cpp  UnitDataReader.h
DataReader/RHDT/: NoEntryException.h  ObjectNotFoundException.h  Rhdat.h  RhdatReader.cpp  RhdatReader.h  RhdatWriter.cpp  RhdatWriter.h  WriteEntry.h
DataReader/RHDT/DataPatcher/: DataPatcher.cpp  DataPatcher.h
DataReader/RHDT/DataPatcher/patches/: DataPatch.h  FactoryPatch.cpp  FactoryPatch.h
Exceptions/: FileNotFoundException.h  IllegalFileExtensionException.h  ObjectNotFoundException.h
data/: unitData.hdat
include/: DataReader.h  GameObject.h  MemoryReader.h  ReadFile.h  TmpFile.h  Unit.h
src/: DataReader.cpp  GameObject.cpp  MemoryReader.cpp  TmpFile.cpp  Unit.cpp
